<resources>
    <string name="app_name">Poke Go Stats</string>

    <!--View Texts-->
    <string name="retry_button">Retry</string>
    <string name="error_message_user">You can retry the server calls by clicking the Retry button</string>

    <!--Types-->
    <string name="reset">Reset</string>
    <string name="normal">Normal</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="electric">Electric</string>
    <string name="grass">Grass</string>
    <string name="ice">Ice</string>
    <string name="fighting">Fighting</string>
    <string name="poison">Poison</string>
    <string name="ground">Ground</string>
    <string name="flying">Flying</string>
    <string name="psychic">Psychic</string>
    <string name="bug">Bug</string>
    <string name="rock">Rock</string>
    <string name="ghost">Ghost</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="steel">Steel</string>
    <string name="fairy">Fairy</string>

    <!--Tab Menu Strings-->
    <string name="pokemon">Pokemon</string>
    <string name="moves">Moves</string>
    <string name="stats">Stats</string>
    <string name="weather">Weather</string>

    <!--Header Strings-->
    <string name="pokemon_form_header"><u>Pokemon(Form)</u></string>
    <string name="max_cp_header"><u>Max CP</u></string>
    <string name="types_header"><u>Types</u></string>
    <string name="move_name_header"><u>Move Name</u></string>
    <string name="move_power_header"><u>Power</u></string>
    <string name="move_type_header"><u>Type</u></string>

    <!--Option Menu Strings-->
    <!--Title-->
    <string name="action_search">Search</string>

    <!--Pokemon Menu List Items-->
    <string name="sort">Sort</string>
    <string name="sort_by_default">Sort by Default</string>
    <string name="sort_by_poke_name_asc">Sort by Name(Asc)</string>
    <string name="sort_by_poke_name_desc">Sort by Name(Desc)</string>
    <string name="sort_by_max_cp_max_min">Sort by Max CP(Max->Min)</string>
    <string name="sort_by_max_cp_min_max">Sort by Max CP(Min->Max)</string>

    <!--Move Menu List Items-->
    <string name="sort_by_move_name_asc">Sort by Name(Asc)</string>
    <string name="sort_by_move_name_desc">Sort by Name(Desc)</string>
    <string name="sort_by_power_max_min">Sort by Power(Max->Min)</string>
    <string name="sort_by_power_min_max">Sort by Power(Min->Max)</string>

    <!--Pokemon/Move Type Menu List Items-->
    <string name="default_filter">Default</string>
    <string name="normal_filter">Normal</string>
    <string name="fire_filter">Fire</string>
    <string name="water_filter">Water</string>
    <string name="electric_filter">Electric</string>
    <string name="grass_filter">Grass</string>
    <string name="ice_filter">Ice</string>
    <string name="fighting_filter">Fighting</string>
    <string name="poison_filter">Poison</string>
    <string name="ground_filter">Ground</string>
    <string name="flying_filter">Flying</string>
    <string name="psychic_filter">Psychic</string>
    <string name="bug_filter">Bug</string>
    <string name="rock_filter">Rock</string>
    <string name="ghost_filter">Ghost</string>
    <string name="dragon_filter">Dragon</string>
    <string name="dark_filter">Dark</string>
    <string name="steel_filter">Steel</string>
    <string name="fairy_filter">Fairy</string>

    <!--Pokemon Names-->
    <string name="pokemon_1_bulbasaur">1</string>
    <string name="pokemon_2_ivysaur">2</string>
    <string name="pokemon_3_venusaur">3</string>
    <string name="pokemon_4_charmander">4</string>
    <string name="pokemon_5_charmeleon">5</string>
    <string name="pokemon_6_charizard">6</string>
    <string name="pokemon_7_squirtle">7</string>
    <string name="pokemon_8_wartortle">8</string>
    <string name="pokemon_9_blastoise">9</string>
    <string name="pokemon_10_caterpie">10</string>
    <string name="pokemon_11_metapod">11</string>
    <string name="pokemon_12_butterfree">12</string>
    <string name="pokemon_13_weedle">13</string>
    <string name="pokemon_14_kakuna">14</string>
    <string name="pokemon_15_beedrill">15</string>
    <string name="pokemon_16_pidgey">16</string>
    <string name="pokemon_17_pidgeotto">17</string>
    <string name="pokemon_18_pidgeot">18</string>
    <string name="pokemon_19_rattata">19</string>
    <string name="pokemon_19_rattata_alola">19,Alola</string>
    <string name="pokemon_20_raticate">20</string>
    <string name="pokemon_20_raticate_alola">20,Alola</string>
    <string name="pokemon_21_spearow">21</string>
    <string name="pokemon_22_fearow">22</string>
    <string name="pokemon_23_ekans">23</string>
    <string name="pokemon_24_arbok">24</string>
    <string name="pokemon_25_pikachu">25</string>
    <string name="pokemon_26_raichu">26</string>
    <string name="pokemon_26_raichu_alola">26,Alola</string>
    <string name="pokemon_27_sandshrew">27</string>
    <string name="pokemon_27_sandshrew_alola">27,Alola</string>
    <string name="pokemon_28_sandslash">28</string>
    <string name="pokemon_28_sandslash_alola">28,Alola</string>
    <string name="pokemon_29_nidoran">29</string>
    <string name="pokemon_30_nidorina">30</string>
    <string name="pokemon_31_nidoqueen">31</string>
    <string name="pokemon_32_nidoran">32</string>
    <string name="pokemon_33_nidorino">33</string>
    <string name="pokemon_34_nidoking">34</string>
    <string name="pokemon_35_clefairy">35</string>
    <string name="pokemon_36_clefable">36</string>
    <string name="pokemon_37_vulpix">37</string>
    <string name="pokemon_37_vulpix_alola">37,Alola</string>
    <string name="pokemon_38_ninetales">38</string>
    <string name="pokemon_38_ninetales_alola">38,Alola</string>
    <string name="pokemon_39_jigglypuff">39</string>
    <string name="pokemon_40_wigglytuff">40</string>
    <string name="pokemon_41_zubat">41</string>
    <string name="pokemon_42_golbat">42</string>
    <string name="pokemon_43_oddish">43</string>
    <string name="pokemon_44_gloom">44</string>
    <string name="pokemon_45_vileplume">45</string>
    <string name="pokemon_46_paras">46</string>
    <string name="pokemon_47_parasect">47</string>
    <string name="pokemon_48_venonat">48</string>
    <string name="pokemon_49_venomoth">49</string>
    <string name="pokemon_50_diglett">50</string>
    <string name="pokemon_50_diglett_alola">50,Alola</string>
    <string name="pokemon_51_dugtrio">51</string>
    <string name="pokemon_51_dugtrio_alola">51,Alola</string>
    <string name="pokemon_52_meowth">52</string>
    <string name="pokemon_52_meowth_alola">52,Alola</string>
    <string name="pokemon_53_persian">53</string>
    <string name="pokemon_53_persian_alola">53,Alola</string>
    <string name="pokemon_54_psyduck">54</string>
    <string name="pokemon_55_golduck">55</string>
    <string name="pokemon_56_mankey">56</string>
    <string name="pokemon_57_primeape">57</string>
    <string name="pokemon_58_growlithe">58</string>
    <string name="pokemon_59_arcanine">59</string>
    <string name="pokemon_60_poliwag">60</string>

    <string name="pokemon_169_crobat">169</string>
    <string name="pokemon_172_pichu">172</string>
    <string name="pokemon_173_cleffa">173</string>
    <string name="pokemon_174_igglybuff">174</string>
    <string name="pokemon_182_bellossom">182</string>
</resources>
