<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/item_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/sort_default"
                android:title="@string/sort_by_default"/>
            <item android:id="@+id/sort_move_name_desc"
                android:title="@string/sort_by_move_name_desc"/>
            <item android:id="@+id/sort_power_max_min"
                android:title="@string/sort_by_power_max_min"/>
            <item android:id="@+id/sort_power_min_max"
                android:title="@string/sort_by_power_min_max"/>
        </menu>
    </item>

    <item android:id="@+id/move_type_filter"
        android:title="@string/sort"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="ifRoom">

        <group android:checkableBehavior="single">
            <item android:id="@+id/move_default_filter"
                android:title="@string/default_filter">
            </item>
            <item android:id="@+id/move_normal_filter"
                android:title="@string/normal_filter">
            </item>
            <item android:id="@+id/move_fire_filter"
                android:title="@string/fire_filter">
            </item>
            <item android:id="@+id/move_water_filter"
                android:title="@string/water_filter">
            </item>
            <item android:id="@+id/move_electric_filter"
                android:title="@string/electric_filter">
            </item>
            <item android:id="@+id/move_grass_filter"
                android:title="@string/grass_filter">
            </item>
            <item android:id="@+id/move_ice_filter"
                android:title="@string/ice_filter">
            </item>
            <item android:id="@+id/move_fighting_filter"
                android:title="@string/fighting_filter">
            </item>
            <item android:id="@+id/move_poison_filter"
                android:title="@string/poison_filter">
            </item>
            <item android:id="@+id/move_ground_filter"
                android:title="@string/ground_filter">
            </item>
            <item android:id="@+id/move_flying_filter"
                android:title="@string/flying_filter">
            </item>
            <item android:id="@+id/move_psychic_filter"
                android:title="@string/psychic_filter">
            </item>
            <item android:id="@+id/move_bug_filter"
                android:title="@string/bug_filter">
            </item>
            <item android:id="@+id/move_rock_filter"
                android:title="@string/rock_filter">
            </item>
            <item android:id="@+id/move_ghost_filter"
                android:title="@string/ghost_filter">
            </item>
            <item android:id="@+id/move_dragon_filter"
                android:title="@string/dragon_filter">
            </item>
            <item android:id="@+id/move_dark_filter"
                android:title="@string/dark_filter">
            </item>
            <item android:id="@+id/move_steel_filter"
                android:title="@string/steel_filter">
            </item>
            <item android:id="@+id/move_fairy_filter"
                android:title="@string/fairy_filter">
            </item>
        </group>
    </item>
</menu>